--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hangman-app",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "keywords": [
     "hangman",
-    "CLI"
+    "CLI", "word guess"
   ],
   "author": "Linu Ramachandran",
   "license": "ISC",
